
2015-12-05  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: added support for optional offset parameter for
	  FORMATTED-(DATE)TIME functions (defaults to zero).

2015-12-03  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: fixed bug #169 - added correct implementation of times
	  ending with Z (i.e. to return the UTC time).

2015-11-08  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (set_cob_time_offset)[WIN32]: bug #161 - offset for CURRENT-DATE

2015-10-28  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (cob_check_linkage): add function for check of linkage items
	  (currently checking only access to not passed OPTIONAL items)

2015-10-25  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (cob_init)[WIN32]: resolve COB_UNIX_LF before reading runtime
	  configuration as error messages would have wrong LF otherwise

2015-10-24  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* common.c (conf_runtime_error): add function for configuration specific
	  errors and tweaked the messages
	* common.c (set_config_val): added possible values for gc_conf.enums
	  to error messages; added check of maximum values for ENV_SIZE
	* common.c (cob_load_config_file): if include file is not found prefix
	  it with path of current loaded configuration file
	* common.c: tweaked output for --runtime-env and added function
	  (set_config_val_by_name) for overriding default values (used for USERNAME)

2015-10-25  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c: fixed bug #161 - fixed screens terminating when the number
	  of characters entered equalled the length of the first field.
	* screenio.c: added a few comments and shortened some code.

2015-10-17  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: fixed bug #159 - added conversion from 1-based to 0-based
	  coordinates for case where only LINE clause is given on
	  ACCEPT/DISPLAY.
